Fix npe with null Refs in lists. Relates to #46