@@ -41,14 +41,6 @@
                     <useModulePath>true</useModulePath>
                     <argLine>
                         -Dstorm.validation.skip=false
-                        --add-opens java.base/java.lang=ALL-UNNAMED
-                        --add-opens storm.serialization/st.orm.serialization=ALL-UNNAMED
-                        --add-opens storm.serialization/st.orm.serialization.model=ALL-UNNAMED
-                        --add-opens storm.serialization/st.orm.serialization=kotlin.reflect
-                        --add-opens storm.serialization/st.orm.serialization=storm.core
-                        --add-opens storm.serialization/st.orm.serialization.model=storm.core
-                        --add-opens storm.serialization/st.orm.serialization=kotlinx.serialization.core
-                        --add-opens storm.serialization/st.orm.serialization.model=kotlinx.serialization.core
                         -Dstorm.ansiEscaping=true
                     </argLine>
                     <forkCount>1</forkCount>
